--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".ui.activities.AddMeetingActivity"
+            android:parentActivityName=".ui.activities.MeetingListActivity"
+            android:label="Add meeting">
+        </activity>
         <activity android:name=".ui.activities.MeetingListActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
